# src/main/scala/com/github/sursmobil/api/RecipeSummary.scala
@@ -1,0 +1,9 @@
+package com.github.sursmobil.api
+
+import spray.json.RootJsonFormat
+
+case class RecipeSummary(id: String, name: String)
+
+object RecipeSummary extends JsonSupport {
+  implicit val format: RootJsonFormat[RecipeSummary] = jsonFormat2(RecipeSummary.apply)
+}
