# src/main/scala/com/github/sursmobil/api/Recipes.scala
@@ -1,0 +1,9 @@
+package com.github.sursmobil.api
+
+import spray.json.RootJsonFormat
+
+case class Recipes(data: List[RecipeSummary])
+
+object Recipes extends JsonSupport {
+  implicit val format: RootJsonFormat[Recipes] = jsonFormat1(Recipes.apply)
+}
